--- a/header.css
+++ b/header.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: abc;
+    src: url(file/SchibstedGrotesk-VariableFont_wght.ttf);
+}
+
+:root {
+    font-family: abc;
+}
+
+html {
+    overflow-x: hidden;
+}
+
 body {
     background-color: #D9D5D4;
     margin: 0;
