--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: abc;
+    src: url(file/SchibstedGrotesk-VariableFont_wght.ttf);
+}
+
+:root {
+    font-family: abc;
+}
+
 body {
     display: flex;
     justify-content: space-around;
