--- a/index.css
+++ b/index.css
@@ -64,3 +64,13 @@ a:hover {
     justify-content: space-around;
     font-size: 20px;
 }
+
+h2 {
+    margin: 0px;
+    font-size: 16px;
+}
+
+h1 {
+    margin: 0px;
+    margin-bottom: 4px;
+}
